[package]
name = "xiao_rp2040_rs"
version = "0.1.0"
edition = "2024"
description = "XIAO RP2040 RGB LED Blinking"
license = "MIT"

[dependencies]
cortex-m = "0.7.6"
seeeduino-xiao-rp2040 = "0.2.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
cortex-m-rt = "0.7"
rp2040-boot2 = "0.2.0"
ws2812-pio = "0.4.0"
smart-leds = "0.3.0"
