[package]
name = "rust-xiao"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-halt = "1.0.0"

# We're using a Pico by default on this template
rp-pico = "0.9"
ws2812-pio = "0.8.0"
smart-leds = "0.3.0"
micromath = "2.1.0"

# smart_led_effects requires std
#smart_led_effects = "0.1.7"
